# movie_decoding

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
.run/: main.run.xml  save_config.run.xml
movie-decoding/: hp_search2.py  main.py
movie-decoding/src/models/: bert.py  mlp.py  multichannel_encoder_crossvit.py  multichannel_vit_cct.py  spike_encoder.py  tttt2.py  vit_huggingface.py  vivit_huggingface.py
movie-decoding/src/utils/: check_free_recall.py  free_recall - old.py  initializer.py  meters.py
scripts/: pipeline_decode_sleep.py  run_model.py  save_config.py  save_neural_data.py  save_patients.py
src/: trainer.py
src/brain_decoding/: batch_main.sh  hp_search2.py  main.py  main_augment2.py  trainer.py
src/brain_decoding/config/: file_path.py
src/brain_decoding/dataloader/: free_recall.py  load_patients.py  movie.py
src/brain_decoding/models/: EncoderDecoder.py  bert.py  crossvit_module.py  detr.py  detr_huggingface.py  ensemble.py  lstm.py  multichannel_encoder_crossvit.py  multichannel_encoder_vit.py  multichannel_encoder_vit_sum.py  multichannel_encoder_wav2vec.py  tttt.py  (+12 more)
src/dataloader/: free_recall.py  movie.py
src/models/: multichannel_encoder_vit_sum.py  vit.py  vit_huggingface_3choose1.py  vit_huggingface_3in1.py  wav2vec.py  wav2vec_huggingface.py
src/movie-decoding/: hp_search2.py  main.py  main_augment2.py  test.py  trainer.py
src/movie_decoding/: batch_main.sh  hp_search2.py  main.py  test.py  trainer.py
src/param/: param_combined.py  param_crossvit.py  param_data.py
src/tools/: setup_env.sh  setup_hoffman_env.sh  setup_sge_env.sh
src/utils/: evaluator.py  permutation.py
tests/: test_pydantic.py  test_pytorch.py
(+169 files in other folders)
