[tool.poetry]
name = "movie_decoding"
version = "0.1.0"
description = ""
authors = ["NxNiki <michaelniki1988@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "movie_decoding", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
torchvision = "^0.19.0"
transformers = "^4.0.0"
ray = "^2.34.0"
wandb = "^0.17.3"
einops = "^0.8.0"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
statsmodels = "^0.14.2"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
pyarrow = "^17.0.0"

[tool.poetry.dev-dependencies]
black = "^23.0"
isort = "^5.10.1"
mypy = "^1.4.1"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Black configuration
[tool.black]
line-length = 120
target-version = ['py310']

# isort configuration
[tool.isort]
profile = "black"

# mypy configuration
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
